2013-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Route.h:
	* Route.cpp:
	* X3DExecutionContext.cpp: 

2013-11-22  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DExecutionContext.cpp: 

2013-11-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Route.h:
	* Route.cpp:
	* X3DBaseNode.cpp:
	* X3DExecutionContext.cpp:
	* X3DTimeDependentNode.cpp: 

2013-11-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Debug.h:
	* Set.h:
	* Traverse.cpp:
	* X3DOutput.cpp:
	* Grammar.cpp:
	* X3DChildObject.h:
	* X3DBaseNode.cpp:
	* X3DScene.cpp:
	* X3DChildObject.cpp:
	* Generator.cpp:
	* X3DFieldDefinition.h:
	* X3DFieldDefinition.cpp:
	* Anchor.cpp:
	* jsContext.cpp:
	* X3DPrototypeInstance.cpp:
	* X3DPointingDeviceSensorNode.cpp: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DGroupingNode.cpp: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.cpp: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* SFVec4.h:
	* MFNode.h:
	* SFVec3.h:
	* SFTime.h:
	* SFVec2.h:
	* Numbers.h:
	* X3DField.h:
	* SFImage.h:
	* SFColor.h:
	* SFString.h:
	* SFTime.cpp:
	* X3DScalar.h:
	* X3DSFNode.h:
	* SFColor.cpp:
	* SFMatrix3.h:
	* SFMatrix4.h:
	* X3DScalar.cpp:
	* SFColorRGBA.h:
	* SFRotation4.h:
	* X3DArrayField.h:
	* X3DBaseNode.cpp:
	* SFColorRGBA.cpp:
	* Selection.h:
	* Selection.cpp:
	* jsfield.cpp:
	* jsX3DArrayField.h:
	* jsSFMatrix4.h: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3D.h:
	* GoldenGate.h:
	* GoldenGate.cpp: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DPrototypeInstance.cpp: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3D.h: 

2013-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Debug.h: 

2013-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DPrototypeInstance.cpp: 

2013-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DPrototypeInstance.cpp: 

2013-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Traverse.cpp:
	* Script.h:
	* Script.cpp:
	* X3DGroupingNode.h:
	* Fog.h: